--- a/projeto-nomesistema.tex
+++ b/projeto-nomesistema.tex
@@ -285,6 +285,7 @@
 		1.4             & Álvaro Alves         & 26/10/2025    & Construção inicial da arquitetura (Cap. \ref{sec-arquitetura}).                                                              \\\hline
 		2.0             & Álvaro Alves         & 27/10/2025    & Finalização da arquitetura (Cap. \ref{sec-arquitetura}).                                                                     \\\hline
 		2.1             & Álvaro Alves         & 06/11/2025    & Correções dos Cap. \ref{sec-intro} a Cap. \ref{sec-rnfs} após avaliação.                                                     \\\hline
+		3.0             & Pedro Quedevez       & 09/11/2025    & Projeto dos Componentes da Arquitetura (Cap. \ref{sec-componentes}).                                                         \\\hline
 	\end{tabular}
 \end{center}
 \newpage
