fix: add notes on structural decisions for the model in chapter 5

--- a/capitulos/ch5-componentes.tex
+++ b/capitulos/ch5-componentes.tex
@@ -30,3 +30,5 @@ O pacote Application é responsável por orquestrar as operações do sistema, c
 \end{figure}
 
 O pacote Domain contém as entidades do domínio do problema, representando os conceitos e objetos relevantes para o sistema. Cada entidade encapsula seus atributos e comportamentos (métodos), fornecendo uma interface clara para a manipulação dos dados relacionados ao domínio.
+
+\vitor{Registrar as principais decisões tomadas para se chegar a este modelo relativas a alterações estruturais do modelo, e.g., aquelas que levaram à criação de novas classes e associações.}
