fix: add detail to architectural decision explanation in chapter 4

--- a/capitulos/ch4-arquitetura.tex
+++ b/capitulos/ch4-arquitetura.tex
@@ -15,7 +15,7 @@ A Figura~\ref{figura-arquitetura} mostra a arquitetura do sistema \emph{\imprimi
 \vspace{0.5cm}
 
 A arquitetura do sistema \emph{\imprimirtitulo} é baseada na Arquitetura em Camadas~\cite{tu2023layered}, adaptando a Arquitetura MVC~\cite{qureshi2014mvc}. Ela é organizada em três camadas.
-\alvaro{No projeto inicial de Engenharia de Software 1 (até a v 2.0), havíamos adotado o estilo arquitetônico de partições, mas ao longo do desenvolvimento do projeto, percebemos que a arquitetura em camadas se encaixava melhor nas necessidades do sistema. Portanto, o projeto foi alterado para refletir isso.}
+\alvaro{No projeto inicial de Engenharia de Software 1 (até a v 2.0), havíamos adotado o estilo arquitetônico de partições, mas ao longo do desenvolvimento do projeto, percebemos que a arquitetura em camadas se encaixava melhor nas necessidades do sistema (como a herança entre entidades que antes faziam parte de duas partições diferentes). Portanto, o projeto foi alterado para refletir isso.}
 
 As camadas da arquitetura de cada subsistema são definidas como:
 \begin{itemize}
