fix: update architecture description and document layer separation in chapter 4

--- a/projeto-nomesistema.tex
+++ b/projeto-nomesistema.tex
@@ -286,6 +286,7 @@
 		2.0             & Álvaro Alves         & 27/10/2025    & Finalização da arquitetura (Cap. \ref{sec-arquitetura}).                                                                     \\\hline
 		2.1             & Álvaro Alves         & 06/11/2025    & Correções dos Cap. \ref{sec-intro} a Cap. \ref{sec-rnfs} após avaliação.                                                     \\\hline
 		3.0             & Pedro Quedevez       & 09/11/2025    & Projeto dos Componentes da Arquitetura (Cap. \ref{sec-componentes}).                                                         \\\hline
+		4.0             & Álvaro Alves         & 12/12/2025    & Alteração do Diagrama de Pacotes e descrição das camadas da arquitetura (Cap. \ref{sec-arquitetura}).                        \\\hline
 	\end{tabular}
 \end{center}
 \newpage
