feat: replace architecture figure with new package diagram and update image dimensions

--- a/capitulos/ch4-arquitetura.tex
+++ b/capitulos/ch4-arquitetura.tex
@@ -7,7 +7,7 @@ A Figura~\ref{figura-arquitetura} mostra a arquitetura do sistema \emph{\imprimi
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.5\textwidth,height=0.6\textheight]{figuras/figura-arquitetura.jpg}
+	\includegraphics[width=1.0\textwidth,height=0.6\textheight]{figuras/diagrama_pacotes.png}
 	\caption{Arquitetura do sistema.}
 	\label{figura-arquitetura}
 \end{figure}
