--- a/capitulos/ch5-componentes.tex
+++ b/capitulos/ch5-componentes.tex
@@ -9,22 +9,30 @@ A seguir, são apresentados os componentes de cada camada do sistema.
 \section{Camada de Lógica de Negócio (CLN)}
 \label{sec-componentes-cln}
 
-Os componentes da Camada de Lógica de Negócio (CLN) são responsáveis por implementar as regras de negócio do sistema, realizando o processamento dos dados recebidos da camada de apresentação (CIU) e interagindo com a Camada de gerência de dados (CGD) para persistência e recuperação das informações necessárias.
+Os componentes da Camada de Lógica de Negócio (CLN) são responsáveis por implementar as regras de negócio do sistema, realizando o processamento dos dados recebidos e ações solicitadas da camada de apresentação (CIU) e interagindo com a Camada de gerência de dados (CGD) para persistência e recuperação das informações necessárias.
 
-A CLN também contém dois pacotes principais, o pacote Domain e o pacote Application, e interage com a Camada de Domínio do Problema (CDP) através das classes do pacote Domain, para utilizar as entidades específicas do domínio e seus métodos e atributos.
+Para manter a consistência com as regras do domínio, a CLN utiliza as entidades definidas na Camada de Domínio do Problema (\ref{sec-componentes-cdp}) para representar os conceitos e objetos centrais do sistema.
 
 \subsection{Pacote Application}
 \label{sec-componentes-cln-application}
 
-O pacote Application é responsável por orquestrar as operações do sistema, coordenando a interação entre os componentes da CLN e a CGD. Ele contém os serviços que implementam as principais funcionalidades do sistema, utilizando as entidades do pacote Domain para realizar as operações de negócio.
+O pacote Application é o pacote principal da CLN e é responsável por orquestrar as operações do sistema, coordenando a interação entre os componentes da CLN, CDP e a CGD.
+Ele contém os serviços que implementam as principais funcionalidades do sistema, utilizando as entidades do pacote Entities (\ref{sec-componentes-cdp-entities}) para realizar as operações de negócio.
 
 Nesta camada, concentram-se os fluxos de execução que envolvem múltiplas entidades, como o cadastro de clientes e animais, o agendamento de serviços e o registro de vendas. Os serviços do Application encapsulam regras de validação, controle transacional e tratamento de exceções, garantindo a consistência dos dados e a correta comunicação entre a interface do usuário e a camada de persistência.
 
 A modelagem foi feita de modo a manter os serviços coesos e independentes, permitindo que cada caso de uso seja tratado de forma isolada. Essa decisão favorece a manutenção, a testabilidade e a evolução do sistema, além de reduzir o acoplamento entre as camadas. Dessa forma, o pacote Application atua como um ponto central de coordenação da lógica de negócio, garantindo que as regras definidas no domínio sejam corretamente aplicadas e refletidas nas operações do sistema.
+O pacote Application contém subpacotes relacionados à logica, como os pacotes de casos de uso (UseCases), de mapeamento (Mappers) e condicionais baseadas em regras de negócio (Strategies).
 
 \newpage
-\subsection{Pacote Domain}
-\label{sec-componentes-cln-domain}
+\section{Camada de Domínio do Problema (CDP)}
+\label{sec-componentes-cdp}
+
+Os componentes da Camada de Domínio do Problema (CDP) são responsáveis por representar os conceitos e regras específicas do domínio do sistema, encapsulando as entidades, atributos, comportamentos e valores que refletem o negócio.
+Essa camada atua como a base conceitual do sistema, fornecendo uma estrutura clara e organizada para a modelagem dos elementos essenciais do domínio.
+
+\subsection{Pacote Entities}
+\label{sec-componentes-cdp-entities}
 
 \begin{figure}[h]
 	\centering
@@ -35,11 +43,11 @@ A modelagem foi feita de modo a manter os serviços coesos e independentes, perm
 
 \vitor{Por que os atributos são todos públicos? Nos requisitos as classes Animal e Agendamento possuem vários atributos que não aparecem mais aqui. Por que? Por que usar a antiga classe Date ao invés das novas classes LocalDate, LocalTime, etc.? Nos requisitos, Agendamento tem relação com Filial, Funcionario... Faltou representar os enums. As cardinalidades estão no lugar errado. Usar a sintaxe da UML. Faltou representar anavegabilidade entreas classes.}
 
-O pacote Domain contém as entidades que representam os conceitos e objetos centrais do sistema Pet Shop, refletindo diretamente o funcionamento do negócio. Cada entidade encapsula seus atributos e comportamentos (métodos), fornecendo uma interface clara para a manipulação e validação dos dados do domínio.
+O pacote Entities contém as entidades que representam os conceitos e objetos centrais do sistema Pet Shop, refletindo diretamente o funcionamento do negócio. Cada entidade encapsula seus atributos e comportamentos (métodos), fornecendo uma interface clara para a manipulação e validação dos dados do domínio.
 
 Essa camada foi projetada para manter a coesão e a independência das regras do negócio em relação às demais camadas do sistema, garantindo que a lógica essencial permaneça concentrada nas próprias entidades. As relações entre elas foram definidas para representar de forma fiel as operações reais do pet shop, como o vínculo entre clientes e animais, o registro de agendamentos de serviços e a associação de vendas a produtos e funcionários.
 
-A modelagem também segue princípios de clareza e extensibilidade, permitindo que novas entidades e atributos possam ser incluídos futuramente sem impactar a estrutura existente. Assim, o pacote Domain atua como a base conceitual do sistema, assegurando consistência, reuso e alinhamento direto com os processos de negócio do pet shop.
+A modelagem também segue princípios de clareza e extensibilidade, permitindo que novas entidades e atributos possam ser incluídos futuramente sem impactar a estrutura existente. Assim, o pacote Entities atua como a base conceitual do sistema, assegurando consistência, reuso e alinhamento direto com os processos de negócio do pet shop.
 
 Para chegar ao modelo atual, foram feitas mudanças nos relacionamentos entre as entidades, a fim de garantir fluxos melhores definidos e o menor acoplamento possível entre as entidades, relacionando apenas as entidades que necessitavam de outras entidades para funcionarem corretamente. Além de melhorias nos nomes das entidades para facilitar a compreensão.
 
@@ -47,3 +55,11 @@ i.ex.: Na primeira versão do domínio, a relação era entre \verb|BanhistaTosa
 Outro exemplo, foi a entidade \verb|EstoqueProduto|, que deixou de ser uma entidade para se tornar o atributo "quantidadeEstoque" na entidade \verb|Produto|.
 
 \vitor{Mas como você vai saber a quantidade em estoque de cada filial? Explicar também a inclusão da classe Usuario, que não existia.}
+
+\subsection{Pacote Enums}
+\label{sec-componentes-cdp-enums}
+
+O pacote Enums contém os tipos enumerados utilizados no sistema para representar conjuntos fixos de valores relacionados a atributos específicos das entidades.
+Esses enums fornecem uma maneira clara e consistente de definir e utilizar valores predefinidos, facilitando a validação e a manipulação dos dados no contexto do domínio do pet shop.
+
+Os enums também podem representar os possíveis estados ou valores que serão utilizados pela CLN (\ref{sec-componentes-cln}) para implementar regras de negócio específicas.
