feat: replace diagrama-dominio.jpg with diagrama_dominio.png

--- a/capitulos/ch5-componentes.tex
+++ b/capitulos/ch5-componentes.tex
@@ -36,7 +36,7 @@ Essa camada atua como a base conceitual do sistema, fornecendo uma estrutura cla
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=1\textwidth]{figuras/diagrama-dominio.jpg}
+	\includegraphics[width=1\textwidth]{figuras/diagrama_dominio.png}
 	\caption{Componentes de Domínio do Problema}
 	\label{figura-cln-domain}
 \end{figure}
